--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>this is my web cs page</title>
 </head>
 <body>
-    <h1>hello cs world</h1>
-    <a href="2.html"> go to cs detail</a>
+    <h1>click to mainmenu</h1>
+    <a href="mainmenu.php"> go to cs detail</a>
 </body>
 </html>
