--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>click to mainmenu</h1>
     <a href="mainmenu.php"> go to cs detail</a>
+
+    <p> Design by Mis Uraiwan Inyaem</p>
+    <h3>RMUTT University</h3>
 </body>
 </html>
